        * [BUGFIX]: Fixed problem with keyboard focus for syntax completer under Gnome 3.
        * [BUGFIX]: #2872 'Enter' key in table name of import dialog now triggers 'Next' action, not clearing the table name.
        * [BUGFIX]: #2864 & #2791 Fixed synchronouse execution in QueryExecutor, which also fixes the misterious bug in export dialog, causing empty files being exported.

[3.0.5]
        * [ADDED]: #2831 Ported 'Erase table data' feature (in table's context menu) from version 2.1.5.
        * [CHANGE]: Data view has now a 'cover' with progress bar when commiting more changes at once. This eliminates weird GUI freeze when commiting lots of new/deleted rows.
        * [CHANGE]: Populate dialog has now progress bar when working.
        * [CHANGE]: Enhanced SQL formatter to format CREATE TRIGGER statements in a bit more readable way.
        * [BUGFIX]: #2838 Fixed outstanding bug causing database file to be deleted if a user tried "Test connection" on the database under Windows.
        * [BUGFIX]: Fixed crash when closing Populate Dialog while populating was in progress.
        * [BUGFIX]: Fixed warning messages when there was a problem with restoring windows from last session. A message contains now window name that caused problem.
        * [BUGFIX]: #2830 Closing database list made impossible.
        * [BUGFIX]: #2829 Fixed support for DEFERRABLE (and related) keywords in foreign keys.
        * [BUGFIX]: #2827 Release a file after import.
        * [BUGFIX]: #2826 Fixed bug in SQL formatter causing 'expr ISNULL' expressions to disappear.
        * [BUGFIX]: #2834 Removed './lib' form rpath for linux non-portable compilation.
        * [BUGFIX]: #2836 Removed termcap dependency, as it was deprecated and no longer required.

[3.0.4]
        * [ADDED]: Import dialog has now "Ignore errors" option, to skip rows that causes problems (constraint violation, wrong column count, etc).